<?xml version="1.0"?>
<package format="2">

  <name>robor_controllers</name>
  <version>1.0.0</version>
  <description>Various motion controllers for Robor project.</description>
  <maintainer email="mateusz.przybyla@put.poznan.pl">Mateusz Przybyla</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>joy</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>youbot_driver</depend>
  <depend>obstacle_detector</depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
